# python-nBodySimulator

./: pyproject.toml  run.Py  run.py  runShell.sh  shellRun.sh
