[tool.poetry]
name = "python-nbodysimulator"
version = "0.1.0"
description = ""
authors = ["oppqrz <jsamuelcolburn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
matplotlib = "^3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
